depth camera, octomap (not working) added

--- a/rotors_simulator/rotors_gazebo_plugins/package.xml
+++ b/rotors_simulator/rotors_gazebo_plugins/package.xml
@@ -40,6 +40,8 @@
   <depend>rotors_control</depend>
   <depend>std_srvs</depend>
   <depend>tf</depend>
+  <depend>pcl_ros</depend>
+  <depend>image_transport</depend>
   <depend>yaml-cpp</depend>
 
 </package>
