--- a/flightmare/flightros/package.xml
+++ b/flightmare/flightros/package.xml
@@ -28,4 +28,10 @@
   <depend>cv_bridge</depend>
   <depend>mav_msgs</depend>
 
+  <depend>octomap_ros</depend>
+  <depend>octomap_msgs</depend>
+  <depend>pcl_ros</depend>
+  <depend>pcl_conversions</depend>
+  <depend>sensor_msgs</depend>
+
 </package>
